tdf#63054: pdf_string_parser incorrectly handles escapes

This patch fixes the escapes handling by avoiding boost built-in
functions that skip whitespaces behind the scenes.

Change-Id: I9607ecd9e2e052aadcba69cf30ec25c981743c49